tried again to connect to notice board

--- a/ProjectApp/src/app/app.component.html
+++ b/ProjectApp/src/app/app.component.html
@@ -6,16 +6,14 @@
 </div> -->
 <mat-toolbar color="primary"> 
     <mat-toolbar-row>
-            <span class="title-center">
-        My single page application
-    </span>
-      </mat-toolbar-row>
+            <span class="title-center">Local Notice Board</span>
+    </mat-toolbar-row>
     
       <mat-toolbar-row>
 
   <button mat-button [routerLink]="['/create']" color="Warn">Create</button>
   <button mat-button [routerLink]="['/list']">List</button>
-</mat-toolbar-row>
+      </mat-toolbar-row>
  </mat-toolbar>
  
 
