--- a/ProjectApp/src/app/sidebar/sidebar.component.html
+++ b/ProjectApp/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,21 @@
-<p>
-  sidebar works!
-</p>
+<nav>
+  <ul>
+    <li>
+      <a routerLink="">
+        <i class="material-icons">supervised_user_circle</i>
+      </a>
+    </li>
+    <li>
+        <a routerLink="post-create">
+          <i class="material-icons">create</i>
+        </a>
+      </li>
+      <li>
+        <a routerLink="post-details">
+          <i class="material-icons">
+            assignment
+            </i>
+        </a>
+      </li>
+  </ul>
+</nav>
