--- a/ProjectApp/src/app/sidebar/sidebar.component.html
+++ b/ProjectApp/src/app/sidebar/sidebar.component.html
@@ -11,6 +11,11 @@
         </a>
       </li>
       <li>
+        <a routerLink="home">
+          <i class="material-icons">home</i>
+        </a>
+      </li>
+      <li>
         <a routerLink="post-details">
           <i class="material-icons">
             assignment
